Removed all mistake